tests/resource/valid/definition/assign_with_match_type_annotation.mamba
def a: Int := match 40
    2 => 3
    4 => 30
    _ => 300
