tests/resource/invalid/type/access/slice_begin_wrong_type.mamba
x = [1, 2, 3]
x["a" :: 2 :: 4]
